# ATAM

./: .gitignore  CMakeLists.txt  LICENSE  readme.MD
clapack/: CMakeLists.txt
clapack/SRC/: CMakeLists.txt
data/: camera1920x1080.xml  camera320x240.xml  camera640x480.xml  challenge.txt  params.xml
proj/ATAM/: CMakeLists.txt  mainATAM.cpp
proj/CameraCalibration/: mainCameraCalibration.cpp
proj/CameraCapture/: CMakeLists.txt  mainCameraCapture.cpp
src/atam/: ATAM.cpp  ATAM.h  ATAMData.cpp  ATAMData.h  cvsba.cpp  cvsba.h  generate_synthetic_data.cpp
src/calibration/: Calibration.cpp  Calibration.h
src/camera/: Cam.cpp  Cam.h
src/detector/: PointDetector.cpp  PointDetector.h
src/timer/: Timer.cpp  Timer.h
